--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/menu/__list-item/menu__list-item.css);
 @import url(../blocks/menu/__link/menu__link.css);
 @import url(../blocks/menu/__icon/menu__icon.css);
+@import url(../blocks/wrapper/wrapper.css);
 
 
 
