--- a/pages/index.css
+++ b/pages/index.css
@@ -11,7 +11,16 @@
 @import url(../blocks/menu/__link/menu__link.css);
 @import url(../blocks/menu/__icon/menu__icon.css);
 
-
-
-
-
+@import url(../blocks/content/content.css);
+@import url(../blocks/content/__answer-item/content__answer-item.css);
+@import url(../blocks/content/__answer-list/content__answer-list.css);
+@import url(../blocks/content/__checkbox/content__checkbox.css);
+@import url(../blocks/content/__conditions/content__conditions.css);
+@import url(../blocks/content/__header/content__header.css);
+@import url(../blocks/content/__question-text/content__question-text.css);
+@import url(../blocks/content/__question/content__question.css);
+@import url(../blocks/content/__radio/content__radio.css);
+@import url(../blocks/content/__title/content__title.css);
+@import url(../blocks/content/__divider/content__divider.css);
+@import url(../blocks/content/__show-result/content__show-result.css);
+@import url(../blocks/content/__invisible/content__invisible.css);
