--- a/pages/index.css
+++ b/pages/index.css
@@ -42,3 +42,15 @@
 @import url(../blocks/two-columns/__icon/two-columns__icon.css);
 @import url(../blocks/two-columns/__icons/two-columns__icons.css);
 @import url(../blocks/two-columns/__text-area/two-columns__text-area.css);
+
+@import url(../blocks/aside/aside.css);
+@import url(../blocks/aside/__title/aside__title.css);
+@import url(../blocks/accordion/accordion.css);
+@import url(../blocks/accordion/__button/accordion__button.css);
+@import url(../blocks/accordion/__title/accordion__title.css);
+@import url(../blocks/accordion/__icon-wrapper/accordion__icon-wrapper.css);
+@import url(../blocks/accordion/__icon/accordion__icon.css);
+@import url(../blocks/accordion/__body/accordion__body.css);
+@import url(../blocks/accordion/__list/accordion__list.css);
+@import url(../blocks/accordion/__item/accordion__item.css);
+@import url(../blocks/accordion/__text/accordion__text.css);
