--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,17 @@
 @import url(../blocks/menu/__icon/menu__icon.css);
 @import url(../blocks/wrapper/wrapper.css);
 
+@import url(../blocks/content/__video/content__video.css);
+@import url(../blocks/video/video.css);
+@import url(../blocks/video/__controls/video__controls.css);
+@import url(../blocks/video/__button/video__button.css);
+@import url(../blocks/video/__button/_play/video__button_play.css);
+@import url(../blocks/video/__button/_sound/video__button_sound.css);
+@import url(../blocks/video/__button/_fullscreen/video__button_fullscreen.css);
+@import url(../blocks/video/__range/video__range.css);
+@import url(../blocks/video/__range/_time/video__range_time.css);
+@import url(../blocks/video/__range/_sound/video__range_sound.css);
+
 @import url(../blocks/content/content.css);
 @import url(../blocks/content/__answer-item/content__answer-item.css);
 @import url(../blocks/content/__answer-list/content__answer-list.css);
