--- a/blocks/content/__radio/content__radio.css
+++ b/blocks/content/__radio/content__radio.css
@@ -12,6 +12,6 @@
   background-image: url(../../../images/radio_checked.svg);
 }
 
-.content__invisible:checked ~ .text {
+.content__invisible:checked ~ .content__text {
   color: #f06000;
 }
