--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,11 @@
 @import url(../blocks/content/__show-result/content__show-result.css);
 @import url(../blocks/content/__invisible/content__invisible.css);
 @import url(../blocks/content/__text/content__text.css);
+@import url(../blocks/content/__result/_status/content__result_status_fail.css);
+@import url(../blocks/content/__result/content__result.css);
+@import url(../blocks/content/__result-text/content__result-text.css);
+@import url(../blocks/content/__result-value/content__result-value.css);
+@import url(../blocks/content/__description/content__description.css);
 
 @import url(../blocks/navigation/navigation.css);
 @import url(../blocks/navigation/__button/navigation__button.css);
