--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,11 @@
 @import url(../blocks/menu/__icon/menu__icon.css);
 @import url(../blocks/wrapper/wrapper.css);
 
+@import url(../blocks/breadcrumb-list/breadcrumb-list.css);
+@import url(../blocks/breadcrumb-list/__item/breadcrumb-list__item.css);
+@import url(../blocks/breadcrumb-list/__link/breadcrumb-list__link.css);
+@import url(../blocks/breadcrumb-list/__link/_active/breadcrumb-list__link_active.css);
+
 @import url(../blocks/content/__video/content__video.css);
 @import url(../blocks/video/video.css);
 @import url(../blocks/video/__controls/video__controls.css);
