--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/fonts/fonts.css);
 
 @import url(../blocks/page/page.css);
+@import url(../blocks/main/main.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -64,6 +65,7 @@
 @import url(../blocks/button/_result/button_result.css);
 @import url(../blocks/button/_status/button_status_fail.css);
 @import url(../blocks/button/_status/button_status_succes.css);
+@import url(../blocks/button/__icon/button__icon.css);
 
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/two-columns/__left/two-columns__left.css);
