--- a/blocks/content/__result/content__result.css
+++ b/blocks/content/__result/content__result.css
@@ -1,10 +1,11 @@
 .content__result {
-  width: 808px;
-  height: 206px;
+  width: 680px;
+  min-height: 142px;
+  padding: 32px 64px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 24px;
-  margin: 32px 0;
   border-radius: 16px;
 }
