--- a/blocks/accordion/__button/accordion__button.css
+++ b/blocks/accordion/__button/accordion__button.css
@@ -13,6 +13,7 @@
     box-sizing: border-box;
 }
 
-.accordion:last-of-type .accordion__button {
+.accordion:last-of-type .accordion__button:last-of-type {
     margin-bottom: 0;
 }
+
