--- a/blocks/accordion/__item/accordion__item.css
+++ b/blocks/accordion/__item/accordion__item.css
@@ -14,3 +14,7 @@
 .accordion:last-of-type .accordion__item:last-of-type {
     margin-bottom: 0;
 }
+
+.accordion:last-of-type .accordion__item:first-of-type {
+    margin-top: 32px;
+}
