--- a/blocks/video/__button/video__button.css
+++ b/blocks/video/__button/video__button.css
@@ -7,4 +7,8 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
+  width: 28px;
+  height: 28px;
+  fill: #fff;
+  margin-right: 35px;
 }
