--- a/blocks/content/__result/content__result.css
+++ b/blocks/content/__result/content__result.css
@@ -2,10 +2,8 @@
   width: 680px;
   min-height: 142px;
   padding: 32px 64px;
-  display: flex;
-  flex-direction: column;
+  display: none;
   justify-content: center;
-  align-items: center;
   gap: 24px;
   border-radius: 16px;
 }
