--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,9 @@
 @import url(../blocks/video/__range/video__range.css);
 @import url(../blocks/video/__range/_time/video__range_time.css);
 @import url(../blocks/video/__range/_sound/video__range_sound.css);
+@import url(../blocks/video/__time-count/video__time-count.css);
+@import url(../blocks/video/__icon-volume/video__icon-volume.css);
+@import url(../blocks/video/__icon-volume/_hidden/video__icon-volume_hidden.css);
 
 @import url(../blocks/content/content.css);
 @import url(../blocks/content/__answer-item/content__answer-item.css);
