--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,7 @@
 .content {
-
-  width: 872px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 32px;
   padding: 32px;
   background: #ffffff;
