--- a/pages/index.css
+++ b/pages/index.css
@@ -18,10 +18,34 @@
 @import url(../blocks/breadcrumb-list/__link/breadcrumb-list__link.css);
 @import url(../blocks/breadcrumb-list/__link/_active/breadcrumb-list__link_active.css);
 
-@import url(../blocks/content/content.css);
 @import url(../blocks/content/__header/content__header.css);
 @import url(../blocks/content/__title/content__title.css);
 @import url(../blocks/content/__video/content__video.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/content/__radio/content__radio.css);
+@import url(../blocks/content/__answer-item/content__answer-item.css);
+@import url(../blocks/content/__answer-list/content__answer-list.css);
+@import url(../blocks/content/__checkbox/content__checkbox.css);
+@import url(../blocks/content/__conditions/content__conditions.css);
+@import url(../blocks/content/__header/content__header.css);
+@import url(../blocks/content/__question-text/content__question-text.css);
+@import url(../blocks/content/__question/content__question.css);
+@import url(../blocks/content/__title/content__title.css);
+@import url(../blocks/content/__divider/content__divider.css);
+@import url(../blocks/content/__show-result/content__show-result.css);
+@import url(../blocks/content/__invisible/content__invisible.css);
+@import url(../blocks/content/__text/content__text.css);
+@import url(../blocks/content/__result/_status/content__result_status_fail.css);
+@import url(../blocks/content/__result/content__result.css);
+@import url(../blocks/content/__result-text/content__result-text.css);
+@import url(../blocks/content/__result-value/content__result-value.css);
+@import url(../blocks/content/__description/content__description.css);
+@import url(../blocks/content/__result/_status/content__result_status_succes.css);
+@import url(../blocks/content/_visible/content_visible.css);
+@import url(../blocks/content/_choose/content_choose_fail.css);
+@import url(../blocks/content/_choose/content_choose_null.css);
+@import url(../blocks/content/_choose/content_choose_right.css);
+@import url(../blocks/content/__label/content__label.css);
 
 @import url(../blocks/video/video.css);
 @import url(../blocks/video/__controls/video__controls.css);
