Исправлены нарушения методологии БЭМ

--- a/blocks/aside/__accordion-item-toggler/aside__accordion-item-toggler.css
+++ b/blocks/aside/__accordion-item-toggler/aside__accordion-item-toggler.css
@@ -8,3 +8,7 @@
 	width: 10.54px;
 	height: 6.25px;
 }
+
+.aside__filter-block_active .aside__accordion-item-toggler {
+	background-image: url(../../../../images/sidebar_open-option.svg);
+}
