--- a/blocks/breadcrumb-list/__item/breadcrumb-list__item.css
+++ b/blocks/breadcrumb-list/__item/breadcrumb-list__item.css
@@ -1,3 +1,5 @@
-.breadcrumb-list__item {
-  
-}
+.breadcrumb-list .breadcrumb-list__item+.breadcrumb-list__item::before{
+    padding: 9px;
+    color: black;
+    content: url('../../images/arrow.png');
+  }
