--- a/blocks/content/__text/content__text.css
+++ b/blocks/content/__text/content__text.css
@@ -6,3 +6,19 @@
   font-size: 18px;
   line-height: 24px;
 }
+
+.content__invisible:checked ~ .content__text {
+  color: #f06000;
+}
+
+.content_choose_right:checked ~ .content__text {
+  color: #008000;
+}
+
+.content_choose_fail:checked ~ .content__text {
+  color: #ff0000;
+}
+
+.content_choose_null:checked ~ .content__text {
+  color: #212329;
+}
