--- a/blocks/accordion/__button/accordion__button.css
+++ b/blocks/accordion/__button/accordion__button.css
@@ -3,17 +3,24 @@
     justify-content: space-between;
     cursor: pointer;
     margin: 32px 0 33px 0;
-    text-align: left;
+    /* text-align: left;
     background: transparent;
     appearance: none;
     border: none;
     border-radius: 0;
     padding: 0;
-    width: 100%;
+    width: 100%; */
     box-sizing: border-box;
+    text-decoration: none;
+    color: inherit;
+    transition: opacity .3s;
 }
 
 .accordion:last-of-type .accordion__button:last-of-type {
     margin-bottom: 0;
+}
+
+.accordion__button:hover {
+    opacity: .8;
 }
 
