--- a/blocks/accordion/__list/accordion__list.css
+++ b/blocks/accordion/__list/accordion__list.css
@@ -2,4 +2,8 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: max-height .3s, opacity .5s;
 }
